log
Thu 14 Sep 2023 04:16:26 AM UTC: 
 tests:  1|8
total_score: 0/70
a4a0b07
Thu 14 Sep 2023 04:33:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:13: error: unused variable ‘mapa’ [-Werror=unused-variable]
   40 |   TreeMap * mapa=(TreeMap*)malloc(sizeof(TreeMap));
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
6b23ae6
